--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM tensorflow/tensorflow:1.12.3
-RUN apt update && apt install -y wget clang-8 git make flex bison default-jdk ant python-pip golang
+RUN apt update && apt install -y wget clang-8 git make flex bison default-jdk ant python-pip golang autoconf
 ENV CC=/usr/bin/clang-8 CXX=/usr/bin/clang++-8
 # cmake
 RUN wget https://github.com/Kitware/CMake/releases/download/v3.20.1/cmake-3.20.1-linux-x86_64.tar.gz &&\
